refactor(filter-sidebar): repair and octanify
User-Selection: move templates to optimized-power-select folder
Sy-Datepicker: resolve API to uniform standard and fix input focus
Tests: Update selectors to new component/dom structure

--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -22,186 +22,190 @@
         @on-reset={{(queue t.clear this.reset)}}
         as |fs|
       >
-        <fs.group @label="Task" @expanded={{true}}>
-          <fs.label>
-            Customer
-            <fs.filter data-test-filter-customer>
-              <t.customer />
-            </fs.filter>
-          </fs.label>
-          <fs.label>
-            Project
-            <fs.filter data-test-filter-project>
-              <t.project />
-            </fs.filter>
-          </fs.label>
-          <fs.label>
-            Task
-            <fs.filter data-test-filter-task>
-              <t.task />
-            </fs.filter>
-          </fs.label>
-        </fs.group>
-        <fs.group @label="Responsibility">
-          <fs.label>
-            User
-            <fs.filter data-test-filter-user>
-              <UserSelection
-                @user={{this.selectedUser}}
-                @on-change={{fn this.setModelFilter "user"}}
-                as |u|
-              >
-                <u.user />
-              </UserSelection>
-            </fs.filter>
-          </fs.label>
-          <fs.label>
-            Reviewer
-            <fs.filter data-test-filter-reviewer>
-              <UserSelection
-                @user={{this.selectedReviewer}}
-                @on-change={{fn this.setModelFilter "reviewer"}}
-                @queryOptions={{hash is_reviewer=1}}
-                as |u|
-              >
-                <u.user @placeholder="Select reviewer..." />
-              </UserSelection>
-            </fs.filter>
-          </fs.label>
-        </fs.group>
-        <fs.group @label="Finances">
-          <fs.label>
-            Billing type
-            <fs.filter
-              data-test-filter-billing-type
-              @type="select"
-              @selected={{this.billingType}}
-              @valuePath="id"
-              @labelPath="name"
-              @prompt="All billing types"
-              @options={{this.billingTypes}}
-              @on-change={{fn (mut this.billingType)}}
+        {{#if this.prefetchData.isRunning}}
+          <LoadingIcon />
+        {{else}}
+          <fs.group @label="Task" @expanded={{true}}>
+            <fs.label>
+              Customer
+              <fs.filter data-test-filter-customer>
+                <t.customer />
+              </fs.filter>
+            </fs.label>
+            <fs.label>
+              Project
+              <fs.filter data-test-filter-project>
+                <t.project />
+              </fs.filter>
+            </fs.label>
+            <fs.label>
+              Task
+              <fs.filter data-test-filter-task>
+                <t.task />
+              </fs.filter>
+            </fs.label>
+          </fs.group>
+          <fs.group @label="Responsibility">
+            <fs.label>
+              User
+              <fs.filter data-test-filter-user>
+                <UserSelection
+                  @user={{this.selectedUser}}
+                  @onChange={{fn this.setModelFilter "user"}}
+                  as |u|
+                >
+                  <u.user />
+                </UserSelection>
+              </fs.filter>
+            </fs.label>
+            <fs.label>
+              Reviewer
+              <fs.filter data-test-filter-reviewer>
+                <UserSelection
+                  @user={{this.selectedReviewer}}
+                  @onChange={{fn this.setModelFilter "reviewer"}}
+                  @queryOptions={{hash is_reviewer=1}}
+                  as |u|
+                >
+                  <u.user @placeholder="Select reviewer..." />
+                </UserSelection>
+              </fs.filter>
+            </fs.label>
+          </fs.group>
+          <fs.group @label="Finances">
+            <fs.label>
+              Billing type
+              <fs.filter
+                data-test-filter-billing-type
+                @type="select"
+                @selected={{this.billingType}}
+                @valuePath="id"
+                @labelPath="name"
+                @prompt="All billing types"
+                @options={{this.billingTypes}}
+                @onChange={{fn (mut this.billingType)}}
+              />
+            </fs.label>
+            <fs.label>
+              Cost center
+              <fs.filter
+                data-test-filter-cost-center
+                @type="select"
+                @selected={{this.costCenter}}
+                @valuePath="id"
+                @labelPath="name"
+                @prompt="All cost centers"
+                @options={{this.costCenters}}
+                @onChange={{fn (mut this.costCenter)}}
+              />
+            </fs.label>
+          </fs.group>
+          <fs.group @label="Time range">
+            <fs.label>
+              From
+              <fs.filter
+                data-test-filter-from-date
+                @type="date"
+                @selected={{this.fromDate}}
+                @onChange={{fn (mut this.fromDate)}}
+              />
+            </fs.label>
+            <fs.label>
+              To
+              <fs.filter
+                data-test-filter-to-date
+                @type="date"
+                @selected={{this.toDate}}
+                @onChange={{fn (mut this.toDate)}}
+              />
+            </fs.label>
+            <DateButtons
+              @onUpdateFromDate={{fn (mut this.fromDate)}}
+              @onUpdateToDate={{fn (mut this.toDate)}}
             />
-          </fs.label>
-          <fs.label>
-            Cost center
-            <fs.filter
-              data-test-filter-cost-center
-              @type="select"
-              @selected={{this.costCenter}}
-              @valuePath="id"
-              @labelPath="name"
-              @prompt="All cost centers"
-              @options={{this.costCenters}}
-              @on-change={{fn (mut this.costCenter)}}
-            />
-          </fs.label>
-        </fs.group>
-        <fs.group @label="Time range">
-          <fs.label>
-            From
-            <fs.filter
-              data-test-filter-from-date
-              @type="date"
-              @selected={{this.fromDate}}
-              @on-change={{fn (mut this.fromDate)}}
-            />
-          </fs.label>
-          <fs.label>
-            To
-            <fs.filter
-              data-test-filter-to-date
-              @type="date"
-              @selected={{this.toDate}}
-              @on-change={{fn (mut this.toDate)}}
-            />
-          </fs.label>
-          <DateButtons
-            @onUpdateFromDate={{fn (mut this.fromDate)}}
-            @onUpdateToDate={{fn (mut this.toDate)}}
-          />
-        </fs.group>
-        <fs.group @label="State">
-          <fs.label>
-            Review
-            <fs.filter
-              data-test-filter-review
-              @type="button"
-              @selected={{this.review}}
-              @valuePath="value"
-              @labelPath="label"
-              @options={{array
-                (hash label="All" value="")
-                (hash label="Needed" value="1")
-                (hash label="Not needed" value="0")
-              }}
-              @on-change={{fn (mut this.review)}}
-            />
-          </fs.label>
-          <fs.label>
-            Billability
-            <fs.filter
-              data-test-filter-not-billable
-              @type="button"
-              @selected={{this.notBillable}}
-              @valuePath="value"
-              @labelPath="label"
-              @options={{array
-                (hash label="All" value="")
-                (hash label="Billable" value="0")
-                (hash label="Not billable" value="1")
-              }}
-              @on-change={{fn (mut this.notBillable)}}
-            />
-          </fs.label>
-          <fs.label>
-            Verified
-            <fs.filter
-              data-test-filter-verified
-              @type="button"
-              @selected={{this.verified}}
-              @valuePath="value"
-              @labelPath="label"
-              @options={{array
-                (hash label="All" value="")
-                (hash label="Verified" value="1")
-                (hash label="Not verified" value="0")
-              }}
-              @on-change={{fn (mut this.verified)}}
-            />
-          </fs.label>
-          <fs.label>
-            Billed
-            <fs.filter
-              data-test-filter-billed
-              @type="button"
-              @selected={{this.billed}}
-              @valuePath="value"
-              @labelPath="label"
-              @options={{array
-                (hash label="All" value="")
-                (hash label="Billed" value="1")
-                (hash label="Not Billed" value="0")
-              }}
-              @on-change={{fn (mut this.billed)}}
-            />
-          </fs.label>
-          <fs.label>
-            Editable
-            <fs.filter
-              data-test-filter-editable
-              @type="button"
-              @selected={{this.editable}}
-              @valuePath="value"
-              @labelPath="label"
-              @options={{array
-                (hash label="All" value="")
-                (hash label="Editable" value="1")
-              }}
-              @on-change={{fn (mut this.editable)}}
-            />
-          </fs.label>
-        </fs.group>
+          </fs.group>
+          <fs.group @label="State">
+            <fs.label>
+              Review
+              <fs.filter
+                data-test-filter-review
+                @type="button"
+                @selected={{this.review}}
+                @valuePath="value"
+                @labelPath="label"
+                @options={{array
+                  (hash label="All" value="")
+                  (hash label="Needed" value="1")
+                  (hash label="Not needed" value="0")
+                }}
+                @onChange={{fn (mut this.review)}}
+              />
+            </fs.label>
+            <fs.label>
+              Billability
+              <fs.filter
+                data-test-filter-not-billable
+                @type="button"
+                @selected={{this.notBillable}}
+                @valuePath="value"
+                @labelPath="label"
+                @options={{array
+                  (hash label="All" value="")
+                  (hash label="Billable" value="0")
+                  (hash label="Not billable" value="1")
+                }}
+                @onChange={{fn (mut this.notBillable)}}
+              />
+            </fs.label>
+            <fs.label>
+              Verified
+              <fs.filter
+                data-test-filter-verified
+                @type="button"
+                @selected={{this.verified}}
+                @valuePath="value"
+                @labelPath="label"
+                @options={{array
+                  (hash label="All" value="")
+                  (hash label="Verified" value="1")
+                  (hash label="Not verified" value="0")
+                }}
+                @onChange={{fn (mut this.verified)}}
+              />
+            </fs.label>
+            <fs.label>
+              Billed
+              <fs.filter
+                data-test-filter-billed
+                @type="button"
+                @selected={{this.billed}}
+                @valuePath="value"
+                @labelPath="label"
+                @options={{array
+                  (hash label="All" value="")
+                  (hash label="Billed" value="1")
+                  (hash label="Not Billed" value="0")
+                }}
+                @onChange={{fn (mut this.billed)}}
+              />
+            </fs.label>
+            <fs.label>
+              Editable
+              <fs.filter
+                data-test-filter-editable
+                @type="button"
+                @selected={{this.editable}}
+                @valuePath="value"
+                @labelPath="label"
+                @options={{array
+                  (hash label="All" value="")
+                  (hash label="Editable" value="1")
+                }}
+                @onChange={{fn (mut this.editable)}}
+              />
+            </fs.label>
+          </fs.group>
+        {{/if}}
       </FilterSidebar>
     </TaskSelection>
 
@@ -334,7 +338,7 @@
                         }}"
                       {{on "click" (fn this.selectRow report)}}
                     >
-                      <td >{{report.user.username}}</td>
+                      <td>{{report.user.username}}</td>
                       <td>{{moment-format report.date "DD.MM.YYYY"}}</td>
                       <td>{{format-duration report.duration false}}</td>
                       <td>{{report.task.project.customer.name}}</td>
