--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -1,6 +1,6 @@
 <h1>Users</h1>
 
-<FilterSidebar @on-reset={{perform this.resetFilter}} as |fs|>
+<FilterSidebar @onReset={{perform this.resetFilter}} as |fs|>
   <fs.group @label="General" @expanded={{true}}>
     <fs.label>
       Search
