--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -19,7 +19,7 @@
     >
       <FilterSidebar
         @appliedCount={{this.appliedFilters.length}}
-        @on-reset={{(queue t.clear this.reset)}}
+        @onReset={{(queue t.clear this.reset)}}
         as |fs|
       >
         {{#if this.prefetchData.isRunning}}
