--- a/app/components/sy-modal/template.hbs
+++ b/app/components/sy-modal/template.hbs
@@ -1,12 +1,16 @@
-<EmberWormhole @to="sy-modals">
-  <SyModal::Overlay @visible={{@visible}} @on-close={{this.close}}>
-    <div class="modal-dialog {{if @size (concat 'modal-dialog--' @size)}}">
-      {{yield (hash
-        header = (component 'sy-modal/header' close=this.close)
-        body   = (component 'sy-modal/body'   close=this.close)
-        footer = (component 'sy-modal/footer' close=this.close)
-        close  = (this.close)
-      )}}
-    </div>
-  </SyModal::Overlay>
-</EmberWormhole>
+{{#if @visible}}
+  <EmberWormhole @to="sy-modals">
+    <SyModal::Overlay @visible={{@visible}} @on-close={{this.close}}>
+      <div class="modal-dialog {{if @size (concat 'modal-dialog--' @size)}}">
+        {{yield
+          (hash
+            header=(component "sy-modal/header" close=this.close)
+            body=(component "sy-modal/body" close=this.close)
+            footer=(component "sy-modal/footer" close=this.close)
+            close=(this.close)
+          )
+        }}
+      </div>
+    </SyModal::Overlay>
+  </EmberWormhole>
+{{/if}}
