--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -106,9 +106,11 @@
   <modal.body>
     Overlapping activities will not be taken into account for the timesheet.
   </modal.body>
-  <modal.footer>
+  <modal.footer data-test-overlapping-warning>
     <button
-      class="btn btn-primary" type="button" {{on
+      class="btn btn-primary"
+      type="button"
+      {{on
         "click"
         (if
           this.showUnknownWarning
@@ -118,7 +120,9 @@
       }}
     >That's fine</button>
     <button
-      class="btn btn-default" type="button" {{on
+      class="btn btn-default"
+      type="button"
+      {{on
         "click"
         (queue
           (fn (mut this.showOverlappingWarning) false)
@@ -136,9 +140,11 @@
   <modal.body>
     Unknown tasks will not be taken into account for the timesheet.
   </modal.body>
-  <modal.footer>
+  <modal.footer data-test-unknown-warning>
     <button
-      class="btn btn-primary" type="button" {{on
+      class="btn btn-primary"
+      type="button"
+      {{on
         "click"
         (if
           this.showOverlappingWarning
@@ -148,7 +154,9 @@
       }}
     >That's fine</button>
     <button
-      class="btn btn-default" type="button" {{on
+      class="btn btn-default"
+      type="button"
+      {{on
         "click"
         (queue
           (fn (mut this.showUnknownWarning) false)
