refactor(sy-datepicker): improve UX and fix tests
This reverts some changes from the past:
https://github.com/adfinis/timed-frontend/pull/138/commits/7a0121ed1f740285a5d0ec5111e67b6e39c12025
But mainly it fixes the focus handling of the input.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,6 +30,7 @@
 @import "components/date-navigation";
 @import "components/tracking-bar";
 @import "components/sy-calendar";
+@import "components/sy-datepicker";
 
 html {
   hyphens: auto;
