--- a/app/components/no-mobile-message/template.hbs
+++ b/app/components/no-mobile-message/template.hbs
@@ -1,5 +1,5 @@
 <div class="empty">
-  {{fa-icon 'mobile'}}
+  <FaIcon @icon="mobile" />
   <h3>Sorry, this page doesn't work on mobile!</h3>
   <p>
     The data on this page is taking up too much space for your currently used
