--- a/app/users/edit/credits/overtime-credits/edit/template.hbs
+++ b/app/users/edit/credits/overtime-credits/edit/template.hbs
@@ -1,28 +1,45 @@
-{{#with this.credit.lastSuccessful.value as |credit|}}
-  {{#if (or
-    (and credit.isNew (can 'create overtime-credit'))
-    (and (not credit.isNew) (can 'edit overtime-credit'))
-  )}}
+{{#let this.credit.lastSuccessful.value as |credit|}}
+  {{#if
+    (or
+      (and credit.isNew (can "create overtime-credit"))
+      (and (not credit.isNew) (can "edit overtime-credit"))
+    )
+  }}
     <div class="grid grid--12of12 grid-md--4of12">
       <div class="grid-cell"></div>
       <div class="grid-cell">
-        <ValidatedForm @model={{changeset credit this.OvertimeCreditValidations}} @on-submit={{perform this.save}} as |f|>
-        <h4 class="text-center">{{if credit.isNew 'New' 'Edit'}} overtime credit</h4>
+        <ValidatedForm
+          @model={{changeset credit this.OvertimeCreditValidations}}
+          @on-submit={{perform this.save}}
+          as |f|
+        >
+          <h4 class="text-center">{{if credit.isNew "New" "Edit"}}
+            overtime credit</h4>
           <div class="card">
             <div class="card-block">
               <f.input @label="Date" @name="date" as |fi|>
-                {{sy-datepicker value=fi.value on-change=fi.update}}
+                <SyDatepicker @value={{fi.value}} @onChange={{fi.update}} />
               </f.input>
               <f.input @label="Duration" @name="duration" as |fi|>
-                {{sy-durationpicker value=fi.value on-change=fi.update}}
+                <SyDurationpicker @value={{fi.value}} @onChange={{fi.update}} />
               </f.input>
               <f.input @type="text" @label="Comment" @name="comment" />
               <div class="text-right">
-                <LinkTo @route="users.edit.credits.index" @model={{this.user.id}} class="btn">Cancel</LinkTo>
+                <LinkTo
+                  @route="users.edit.credits.index"
+                  @model={{this.user.id}}
+                  class="btn"
+                >Cancel</LinkTo>
                 {{#unless credit.isNew}}
-                  <button type="button" class="btn btn-danger {{if this.delete.isRunning 'loading'}}" {{action (perform this.delete) credit}} data-test-overtime-credit-delete>Delete</button>
+                  <button
+                    type="button"
+                    class="btn btn-danger
+                      {{if this.delete.isRunning 'loading'}}"
+                    {{on "click" (perform this.delete credit)}}
+                    data-test-overtime-credit-delete
+                  >Delete</button>
                 {{/unless}}
-                <f.submit  @disabled={{f.model.isInvalid}} />
+                <f.submit @disabled={{f.model.isInvalid}} />
               </div>
             </div>
           </div>
@@ -37,4 +54,4 @@
       </div>
     </div>
   {{/if}}
-{{/with}}
+{{/let}}
