test: fix broken tests after codemods

--- a/app/users/edit/credits/absence-credits/edit/template.hbs
+++ b/app/users/edit/credits/absence-credits/edit/template.hbs
@@ -47,7 +47,10 @@
                     {{on "click" (perform this.delete credit)}}
                   >Delete</button>
                 {{/unless}}
-                <f.submit @disabled={{f.model.isInvalid}} />
+                <f.submit
+                  data-test-absence-credit-save
+                  @disabled={{f.model.isInvalid}}
+                />
               </div>
             </div>
           </div>
